package pattern_diagrams.damian.main;

public interface Exercise {
    public String getExerciseDataSummary();
    public String getExerciseTutorialUrl();
}
