package org.example;

public enum SkillLevel {
    GIGACHAD,
    ADVANCED,
    BEGGINER,
    NOOB
}
